cabal-version:      2.4
name:               aoc23-hs
version:            0.1.0.0

author:             Burak Güner
maintainer:         burak.guner@callstack.com

extra-source-files: CHANGELOG.md

executable aoc23-hs
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   app
    default-language: Haskell2010
