cabal-version:      2.4
name:               aoc23-hs
version:            0.1.0.0

author:             Burak Güner
maintainer:         burak.guner@callstack.com

extra-source-files: CHANGELOG.md

-- Have a list of dependencies that are common to all builds.
common common-options
  build-depends:
    base,
    containers,
    file-embed,

executable day0
  import: common-options
  main-is: day0.hs
  hs-source-dirs: app
