cabal-version:      2.4
name:               aoc23-hs
version:            0.1.0.0

author:             Burak Güner
maintainer:         burak.guner@callstack.com

extra-source-files: CHANGELOG.md

-- Have a list of dependencies that are common to all builds.
common common-options
  build-depends:
    base,
    containers,
    file-embed,
    text,
    text-replace,
    split,
    HUnit,

executable day0
  import: common-options
  main-is: day0.hs
  hs-source-dirs: app

executable day1
  import: common-options
  main-is: day1.hs
  hs-source-dirs: app

executable day2
  import: common-options
  main-is: day2.hs
  hs-source-dirs: app

executable day3
  import: common-options
  main-is: day3.hs
  hs-source-dirs: app

executable day4
  import: common-options
  main-is: day4.hs
  hs-source-dirs: app

executable day6
  import: common-options
  main-is: day6.hs
  hs-source-dirs: app
